[impl] Refactor error handling
- Instead of directly setting the response status code and body,
validation errors now cause an exception to be thrown with details of
the error
- Removed dependency on swagger2-koa

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "Graham Whelan <gawhelan@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "swagger2": "^0.0.26",
-    "swagger2-koa": "^0.0.38"
+    "swagger2": "^0.0.26"
   }
 }
